05_squares/grade.txt
Grading at Tue Feb  4 17:20:13 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:46:11: error: unused variable ‘w’ [-Werror=unused-variable]
       int w=size1;
           ^
squares.c:49:11: error: unused variable ‘w’ [-Werror=unused-variable]
       int w=x_offset+size2;
           ^
squares.c:59:6: error: unused variable ‘h’ [-Werror=unused-variable]
  int h=size1;
      ^
squares.c:63:8: error: unused variable ‘h’ [-Werror=unused-variable]
    int h=y_offset+size2;
        ^
squares.c:72:6: error: ‘w’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
      for (int x=0;x<w; x++)
      ^
squares.c:68:3: error: ‘h’ is used uninitialized in this function [-Werror=uninitialized]
   for (int y=0;y<h; y++)
   ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
